# discord-bot-in-rust

./: Cargo.toml  Dockerfile  fly.toml
src/: main.rs
