[package]
name = "g-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = "0.1"
poise = "0.6.1"
rand = "0.10.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
