[package]
name = "g-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Az 'all' helyett adjuk meg a standard discord bot funkciókat
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "http"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Az sqlx-nél is érdemes a konkrét tls-t megadni a Docker build miatt
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "tls-rustls"] }
dotenv = "0.15"
anyhow = "1.0"
yahoo_finance_api = "2.3.1"